# plsa

./: run.sh
conf/: plsa_conf.xml
data/: 0_docs  1_docs  4_docs  5_docs  doc_probs  doc_word  doc_word2  event_doc_word2  event_words_tf  log  term_probs  topic_words  words_tf
data/bak/: doc_probs  term_probs
include/: const.h  plsa.h  util.h
log/: 20150729-164612.25301  20150729-164709.25568  20150801-202055.2999  20150810-105857.10968  main.INFO  plsa_train.INFO
scripts/: evaluate.py  extract.py  gen_dict.py  help.sh  plsa.py  predict.py  prep.py  show_result.py  sub_topic.py  topic_words.py  words_cluster.py
src/: CMakeLists.txt  CMakeLists.txt~  plsa.cpp  plsa_train.cpp  util.cpp
